--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: kitsune
-version: 1.0
+version: '1.0.0'
 main: shx.kitsune.Kitsune
 author: Shiro Interactive
 website: https://shiro.eu.org
@@ -7,3 +7,11 @@ description: Kitsune Core
 api-version: '1.20'
 softdepend:
   - vault
+commands:
+  kitsune:
+    description: Kitsune commands
+    permission: shx.kitsune
+    aliases:
+      - kitsune
+    usage: kitsune
+    permission-message: You don't have permission to use this command
